# Workshop-in-C-and-Cpp

./: README.md
ex1/: CMakeLists.txt  README.md  cipher.c  main.c  tests.c
ex2/: CMakeLists.txt  README.md  main.c  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
ex3/a/: markov_chain.c  markov_chain.h  tweets_generator.c
ex3/b/: README.md  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
ex4/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  matrix_tests.cpp  play.cpp
